fixed alignment

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -60,6 +60,8 @@
   font-size: 1em;
   font-weight: 400;
   color: #333333;
+  padding: 0px;
+  margin: 0px;
 }
 
 #contentWrapper form label {
